# libyunsdr

./: CMakeLists.txt  README.md  libyunsdr.pc.in  libyunsdr_ss.pc.in
cmake/modules/: FindRIFFA.cmake  FindSSE.cmake
src/: CMakeLists.txt
src/yunsdr/: CMakeLists.txt
src/yunsdr/include/: yunsdr_api.h
src/yunsdr/src/: yunsdr_api.c
src/yunsdr_ss/: CMakeLists.txt
src/yunsdr_ss/include/: debug.h  interface_pcie.h  interface_sfp.h  spinlock.h  transport.h  yunsdr_api_ss.h
src/yunsdr_ss/src/: debug.c  interface_pcie.c  interface_sfp.c  spinlock.c  transport.c  yunsdr_api_ss.c
src/yunsdr_ss/tests/: CMakeLists.txt  Makefile--  check.m  cossingen.c  device.c  device.h  main.c  wingetopt.c  wingetopt.h  yunsdr_ss_gps.c  yunsdr_ss_rx.c  yunsdr_ss_tx.c  yunsdr_ss_txrx.c
