CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET(LIBRARY_OUTPUT_PATH "${PROJECT_BINARY_DIR}/lib")
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src/yunsdr/src YUNSDR_src)
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/src/yunsdr/include")
ADD_LIBRARY(yunsdr SHARED ${YUNSDR_src})
ADD_LIBRARY(yunsdr_static STATIC ${YUNSDR_src})
SET_TARGET_PROPERTIES(yunsdr_static PROPERTIES OUTPUT_NAME "yunsdr")

INSTALL(TARGETS yunsdr yunsdr_static
	LIBRARY DESTINATION /usr/local/lib
	ARCHIVE DESTINATION /usr/local/lib)

INSTALL(FILES ${PROJECT_SOURCE_DIR}/src/yunsdr/include/yunsdr_api.h 
	DESTINATION /usr/local/include)
